// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ExploreLayout rendering tests authenticate false - test 1`] = `
<div>
  <div
    class="flex min-h-screen flex-col bg-background"
  >
    <header
      class="sticky top-0 z-50 border-b bg-background/95 backdrop-blur supports-backdrop-filter:bg-background/60"
    >
      <div
        class="container mx-auto flex h-14 max-w-7xl items-center justify-between px-4 sm:px-6"
      >
        <div
          class="flex items-center gap-6"
        >
          <a
            class="flex items-center gap-2 font-semibold"
            data-testid="explore-layout"
            href="/explore"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-compass h-5 w-5 text-primary"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m16.24 7.76-1.804 5.411a2 2 0 0 1-1.265 1.265L7.76 16.24l1.804-5.411a2 2 0 0 1 1.265-1.265z"
              />
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
            <span
              class="hidden sm:inline"
            >
              Vision Notes
               · 
            </span>
            Entdecken
          </a>
        </div>
        <div
          class="flex items-center gap-2"
        >
          <a
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5"
            data-slot="button"
            data-testid="sign-in-link"
            href="/auth/sign-in"
          >
            Anmelden
          </a>
          <a
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5"
            data-slot="button"
            data-testid="sign-up-link"
            href="/auth/sign-up"
          >
            Kostenlos starten
          </a>
        </div>
      </div>
    </header>
    <main
      class="flex-1"
    >
      <div
        data-testid="test-1"
      />
    </main>
    <footer
      class="border-t bg-muted/40 py-6"
    >
      <div
        class="container mx-auto max-w-7xl px-4 sm:px-6"
      >
        <p
          class="text-center text-xs text-muted-foreground"
        >
          © 
          2026
           
          Vision Notes
           · Alle Rechte vorbehalten
        </p>
      </div>
    </footer>
  </div>
</div>
`;

exports[`ExploreLayout rendering tests authenticate true - test 1`] = `
<div>
  <div
    class="flex min-h-screen flex-col bg-background"
  >
    <header
      class="sticky top-0 z-50 border-b bg-background/95 backdrop-blur supports-backdrop-filter:bg-background/60"
    >
      <div
        class="container mx-auto flex h-14 max-w-7xl items-center justify-between px-4 sm:px-6"
      >
        <div
          class="flex items-center gap-6"
        >
          <a
            class="flex items-center gap-2 font-semibold"
            data-testid="explore-layout"
            href="/explore"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-compass h-5 w-5 text-primary"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m16.24 7.76-1.804 5.411a2 2 0 0 1-1.265 1.265L7.76 16.24l1.804-5.411a2 2 0 0 1 1.265-1.265z"
              />
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
            <span
              class="hidden sm:inline"
            >
              Vision Notes
               · 
            </span>
            Entdecken
          </a>
        </div>
        <div
          class="flex items-center gap-2"
        >
          <a
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5"
            data-slot="button"
            data-testid="templates-link"
            href="/"
          >
            Zur Bibliothek
          </a>
        </div>
      </div>
    </header>
    <main
      class="flex-1"
    >
      <div
        data-testid="test-1"
      />
    </main>
    <footer
      class="border-t bg-muted/40 py-6"
    >
      <div
        class="container mx-auto max-w-7xl px-4 sm:px-6"
      >
        <p
          class="text-center text-xs text-muted-foreground"
        >
          © 
          2026
           
          Vision Notes
           · Alle Rechte vorbehalten
        </p>
      </div>
    </footer>
  </div>
</div>
`;
